test/associative/bharshbarg/domains/badSubsetCall.good
badSubsetCall.chpl:4: error: rank mismatch in domain.isSubset()
