test/associative/bharshbarg/domains/badSubsetCall.chpl
var a = {1..5, 10..14};
var b = {2..6};

b.isSubset(a);
